# rust-pong

./: '  Cargo.toml  README.md  \  tailwind.config.js
public/: tailwind.css
src/: ball.rs  consts.rs  funcs.rs  main.rs  paddle.rs
