[package]
name = "wasm-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
rand = { version="0.8.5"}
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'InputEvent',
  'HtmlDivElement',
  'Window',
]}
getrandom = { version = "0.2", features = ["js"] }
