[package]
name = "wasm-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.7.2"
dioxus-web = "0.7.2"
rand = { version="0.9.2"}
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'InputEvent',
  'HtmlDivElement',
  'Window',
]}
getrandom = { version = "0.3", features = ["wasm_js"] }
